fixed nav to center better on mobile, started simplifying on work section

--- a/sassy/sass/app.scss
+++ b/sassy/sass/app.scss
@@ -72,7 +72,7 @@ body{
 //Mobile Header
 // INSERT HERE
 
-#dontwearitout {	
+.dontwearitout {	
 	font-weight: 500;
 	font-size: 90px;
 	text-shadow: 3px -3px 0px $accent;
@@ -85,28 +85,14 @@ body{
 .title {
 	font-weight: 200;
 	font-size: 30px;
-	padding-left: 10px;
-}
-
-.background_image {
-	max-width: 1360px;
-	margin: 0;
-	padding: 0;
-	position: relative;
-
-	img {
-		border-top: 10px solid black;
-		border-bottom: 10px solid black;
-	}
-
+	text-align: center;
 }
 
 .nav {
+	background-color: $accent;
 
 	ul {
-		
 		list-style-type: none;
-		width: 700px;
 		margin: 0, auto;
 
 		li {
@@ -116,89 +102,10 @@ body{
 			line-height: 30px;
 			padding-right: 3px;
 			border: 1px solid $accent;
-			background-color: $accent;
 
 			a {
 				color: #FFF;
 			}
 		}
 	}
-}
-
-/* ============================================================================================================================
-== OVER THOUGHT BUBBLE, EMPTY, WITH BORDER (more CSS3)
-** ============================================================================================================================ */
-
-.thought_container {
-	position: absolute;
-	top: 20%;
-	left: 19%;
-}
-
-.oval-thought-border {
-	position:relative; 
-	padding:70px 30px;
-	margin:1em auto 80px;
-	border:10px solid $accent; 
-	text-align:center;
-	color:#333; 
-	background:#fff;
-	/* css3 */
-	/*
-	NOTES:
-	-webkit-border-radius:240px 140px; // produces oval in safari 4 and chrome 4
-	-webkit-border-radius:240px / 140px; // produces oval in chrome 4 (again!) but not supported in safari 4
-	Not correct application of the current spec, therefore, using longhand to avoid future problems with webkit corrects this
-	*/
-	-webkit-border-top-left-radius:240px 140px;
-	-webkit-border-top-right-radius:240px 140px;
-	-webkit-border-bottom-right-radius:240px 140px;
-	-webkit-border-bottom-left-radius:240px 140px;
-	-moz-border-radius:240px / 140px;
-	border-radius:240px / 140px;
-}
-
-/* creates the larger circle */
-.oval-thought-border:before {
-	content:""; 
-	position:absolute; 
-	z-index:10; 
-	bottom:-40px; 
-	left:100px; 
-	width:50px; 
-	height:50px;
-	border:10px solid $accent;
-	background:#fff;
-	/* css3 */
-	-webkit-border-radius:50px;
-	-moz-border-radius:50px;
-	border-radius:50px;
-    /* reduce the damage in FF3.0 */
-    display:block; 
-}
-
-/* creates the smaller circle */
-.oval-thought-border:after {
-	content:""; 
-	position:absolute; 
-	z-index:10; 
-	bottom:-60px; 
-	left:75px; 
-	width:25px; 
-	height:25px; 
-	border:10px solid $accent;
-	background:#fff;
-	/* css3 */
-	-webkit-border-radius:25px;
-	-moz-border-radius:25px;
-	border-radius:25px;
-    /* reduce the damage in FF3.0 */
-    display:block; 
- }
-
-@media all and (max-width: 770px) {
-// 	.small { display: block; }
-// 	.large { display: none; }
-	.oval-thought-border { visibility: hidden; }
-	
 }
